syntax = "proto3";
package proto;

message PeerInfo {
  string id = 1;            // peer id
  repeated bytes addr = 2;  // peer multiaddrs
}

// /mediachain/dir/register
message RegisterPeer {
  PeerInfo info = 1;
}

// /mediachain/dir/lookup
message LookupPeerRequest {
  string id = 1;
}

message LookupPeerResponse {
  PeerInfo peer = 1;       // abset if peer not found
}

// /mediachain/dir/list
message ListPeersRequest {
}

message ListPeersResponse {
  repeated PeerInfo peers = 1;
}
